--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.13.3
 asyncpg==0.30.0
 fastapi==0.115.3
 gunicorn==23.0.0
+httpx==0.27.2
 pydantic==2.9.2
 pydantic-settings==2.6.0
 SQLAlchemy==2.0.36
