--- a/.env-dev
+++ b/.env-dev
@@ -5,6 +5,10 @@ POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
+#Redis settings
+REDIS_HOST=localhost
+REDIS_PORT=7963
+
 # FastAPI settings
 FASTAPI_PORT=8080
 FRONTEND_PORT=3000
