--- a/example.env
+++ b/example.env
@@ -5,6 +5,10 @@ POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 
+# Redis settings
+REDIS_HOST=
+REDIS_PORT=
+
 # FastAPI settings
 FASTAPI_PORT=
 FRONTEND_PORT=
