--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,4 @@
 services:
-  redis:
-    image: redis:latest
-    env_file: .env
-    ports:
-      - "7963:6379"
-    restart: always
-
   postgres:
     image: 'postgres:16.2'
     env_file: .env
@@ -18,17 +11,27 @@ services:
       retries: 60
     restart: always
 
+  redis:
+    image: 'redis:7'
+    env_file: .env
+    ports:
+      - "7963:6379"
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 1s
+      timeout: 1s
+      retries: 60
+    restart: always
 
-  # backend:
-  #   build: .
-  #   env_file: .env
-  #   ports:
-  #     - ${FASTAPI_PORT}:${FASTAPI_PORT}
-  #   stop_signal: SIGINT
-  #   depends_on:
-  #     redis:
-  #       condition: service_healthy
-  #     postgres:
-  #       condition: service_healthy
-  #   restart: always
-    
+  backend:
+    build: .
+    env_file: .env
+    ports:
+     - ${FASTAPI_PORT}:${FASTAPI_PORT}
+    stop_signal: SIGINT
+    depends_on:
+      redis:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+    restart: always
