--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,15 +23,15 @@ services:
       retries: 60
     restart: always
 
-  backend:
-    build: .
-    env_file: .env
-    ports:
-     - ${FASTAPI_PORT}:${FASTAPI_PORT}
-    stop_signal: SIGINT
-    depends_on:
-      redis:
-        condition: service_healthy
-      postgres:
-        condition: service_healthy
-    restart: always
+#  backend:
+#    build: .
+#    env_file: .env
+#    ports:
+#     - ${FASTAPI_PORT}:${FASTAPI_PORT}
+#    stop_signal: SIGINT
+#    depends_on:
+#      redis:
+#        condition: service_healthy
+#      postgres:
+#        condition: service_healthy
+#    restart: always
