--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 alembic==1.13.3
 asyncpg==0.30.0
 fastapi==0.115.3
+greenlet==3.1.1
 gunicorn==23.0.0
 httpx==0.27.2
+passlib==1.7.4
 pydantic==2.9.2
 pydantic-settings==2.6.0
+redis==5.2.0
 SQLAlchemy==2.0.36
 uvicorn==0.32.0
