--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ httpx==0.27.2
 passlib==1.7.4
 pydantic==2.9.2
 pydantic-settings==2.6.0
+python-jose==3.3.0
 redis==5.2.0
 SQLAlchemy==2.0.36
 uvicorn==0.32.0
