--- a/example.env
+++ b/example.env
@@ -14,7 +14,12 @@ FASTAPI_PORT=
 FRONTEND_PORT=
 API_ADDRESS=
 TEAM=
+TEAM_TOKEN=
 
 # Notifications settings
 MAIL=
 MAIL_PASSWORD=
+
+# JWT settings
+SECRET_KEY=
+ENCODE_ALGORITHM=
